20220606:
 * added "name" key to deps (list of names and UIDs)
 * added "add_deps_tags" in variations and in CMD ({"name":"tag(s)"})
 * added "deps" to variations to be merged with the list of current deps

20220605:
 * clean tmp files in "script" automation by default and keep them using --dirty flag

20220603:
 * added "skip" and "deps" to postprocess to call other scripts.
   For example call install LLVM if detect LLVM fails...

 * added "script" automation to substitute less intuitive "ic"

20220601:
 * added version, path, skip_install and post_deps to IC 
 * added --new to IC to detect new components

20220530:
 * updated ic automation to read tmp-run-state.json 
   and merge it with the "new_state" dict

20220524:
 * changed directory ck2-repo-mlops to cm-devops

20220517:
 * Changed CM_PATH_LIST to +PATH
 * Added general support for +ENV that is expanded to ENV=val1;val2;...:${ENV}

20220511:
 * Better handle exceptions in utils.download_file
 * Added support for variations in intelligent components (ic)
 * Fixed bugs in IC
 * Added "_" prefix in tags to specify variation of IC
 * Record env.sh in "installed artifacts even if bat file is not executed
 * Fixed experiment directory naming on Windows
 * Added "cm version ic" (#233)
